Use PNG icons for writing/podcast labels and fix redesign clipping

--- a/style.css
+++ b/style.css
@@ -168,11 +168,12 @@ nav {
   font-family: var(--serif);
   font-size: clamp(1.8rem, 4.26vw, 4.35rem);
   font-weight: 400;
-  line-height: 1.12;
+  line-height: 1.16;
   letter-spacing: -0.01em;
   color: var(--hero-text);
   margin-bottom: 2.1rem;
-  padding-bottom: 0.08em;
+  padding-bottom: 0.18em;
+  overflow: visible;
   max-width: 100%;
 }
 
@@ -196,10 +197,11 @@ nav {
 
 .hero-word-future {
   font-family: var(--future);
-  font-size: 0.92em;
+  font-size: 1.2em;
   font-weight: 700;
   letter-spacing: 0;
-  line-height: 1.06;
+  line-height: 1.18;
+  padding-bottom: 0.08em;
 }
 
 .hero-word-future,
@@ -471,27 +473,21 @@ a.pillar-link:hover .pillar-title {
 
 .label-icon {
   display: inline-block;
-  width: 0.9em;
-  height: 0.9em;
-  background-color: currentColor;
-  -webkit-mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  -webkit-mask-size: contain;
-  mask-repeat: no-repeat;
-  mask-position: center;
-  mask-size: contain;
+  width: 0.92em;
+  height: 0.92em;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
   margin-right: 0.4rem;
-  vertical-align: baseline;
+  vertical-align: -0.08em;
 }
 
 .icon-writing {
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M6 3h9l5 5v13a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm8 1.5V9h4.5L14 4.5zM8 12h8v1.5H8V12zm0 3.5h8V17H8v-1.5z'/%3E%3C/svg%3E");
-  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M6 3h9l5 5v13a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm8 1.5V9h4.5L14 4.5zM8 12h8v1.5H8V12zm0 3.5h8V17H8v-1.5z'/%3E%3C/svg%3E");
+  background-image: url("assets/icons/icon-writing.png");
 }
 
 .icon-podcast {
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12 3a4 4 0 0 0-4 4v5a4 4 0 1 0 8 0V7a4 4 0 0 0-4-4zm-5.5 9.2a.75.75 0 0 1 1.5 0 4 4 0 0 0 8 0 .75.75 0 0 1 1.5 0 5.5 5.5 0 0 1-4.75 5.44V20h2.25a.75.75 0 0 1 0 1.5h-6a.75.75 0 0 1 0-1.5h2.25v-2.36A5.5 5.5 0 0 1 6.5 12.2z'/%3E%3C/svg%3E");
-  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12 3a4 4 0 0 0-4 4v5a4 4 0 1 0 8 0V7a4 4 0 0 0-4-4zm-5.5 9.2a.75.75 0 0 1 1.5 0 4 4 0 0 0 8 0 .75.75 0 0 1 1.5 0 5.5 5.5 0 0 1-4.75 5.44V20h2.25a.75.75 0 0 1 0 1.5h-6a.75.75 0 0 1 0-1.5h2.25v-2.36A5.5 5.5 0 0 1 6.5 12.2z'/%3E%3C/svg%3E");
+  background-image: url("assets/icons/icon-podcast.png");
 }
 
 .feed-col-link {
@@ -540,10 +536,8 @@ a.pillar-link:hover .pillar-title {
   width: 0.85em;
   height: 0.85em;
   margin-right: 0.45rem;
-  vertical-align: baseline;
-  background-color: currentColor;
-  -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M6 3h9l5 5v13a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm8 1.5V9h4.5L14 4.5zM8 12h8v1.5H8V12zm0 3.5h8V17H8v-1.5z'/%3E%3C/svg%3E") center/contain no-repeat;
-  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M6 3h9l5 5v13a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1zm8 1.5V9h4.5L14 4.5zM8 12h8v1.5H8V12zm0 3.5h8V17H8v-1.5z'/%3E%3C/svg%3E") center/contain no-repeat;
+  vertical-align: -0.08em;
+  background: url("assets/icons/icon-writing.png") center/contain no-repeat;
 }
 
 .article-excerpt {
@@ -656,10 +650,8 @@ a.pillar-link:hover .pillar-title {
   width: 0.85em;
   height: 0.85em;
   margin-right: 0.45rem;
-  vertical-align: baseline;
-  background-color: currentColor;
-  -webkit-mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12 3a4 4 0 0 0-4 4v5a4 4 0 1 0 8 0V7a4 4 0 0 0-4-4zm-5.5 9.2a.75.75 0 0 1 1.5 0 4 4 0 0 0 8 0 .75.75 0 0 1 1.5 0 5.5 5.5 0 0 1-4.75 5.44V20h2.25a.75.75 0 0 1 0 1.5h-6a.75.75 0 0 1 0-1.5h2.25v-2.36A5.5 5.5 0 0 1 6.5 12.2z'/%3E%3C/svg%3E") center/contain no-repeat;
-  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23000' d='M12 3a4 4 0 0 0-4 4v5a4 4 0 1 0 8 0V7a4 4 0 0 0-4-4zm-5.5 9.2a.75.75 0 0 1 1.5 0 4 4 0 0 0 8 0 .75.75 0 0 1 1.5 0 5.5 5.5 0 0 1-4.75 5.44V20h2.25a.75.75 0 0 1 0 1.5h-6a.75.75 0 0 1 0-1.5h2.25v-2.36A5.5 5.5 0 0 1 6.5 12.2z'/%3E%3C/svg%3E") center/contain no-repeat;
+  vertical-align: -0.08em;
+  background: url("assets/icons/icon-podcast.png") center/contain no-repeat;
 }
 
 .pod-dur {
